      with Gpodder service.
    * Possibility to browse through podcasts suggested by gpodder.net and
      through gpodder.net top recommended podcasts.
    * Made possible to make presets for TagGuesser. (BR 264632)
    * Display current timestamp in tray tooltip. (BR 278445)
    * Auto-save the playlist so that it is not lost if Amarok crashes.

  CHANGES:
    * Total rewrite of Automated Playlist Generator algorithm.  New algorithm
      is far less complicated and crash-prone, but at the cost of taking
      longer to converge when the constraint tree is complicated. (BR 240927,
      BR 240301)
    * Added local podcasts are automatically subscribed in gpodder.net.
    * Removed local podcasts are automatically unsubscribed from gpodder.net.
    * GPodder Service automatically subscribes all local podcasts into
      gpodder.net when the login is successfull.
    * Improved the playlist synchronisation feature.
    * Make possible to get count tracks before the XSPF file is fully loaded.
    * Mark unplayble tracks in the playlist. Patch by Sandeep Raghuraman. (BR 263640)
    * Current track applet: show number of artists instead of genres. (BR 261077)


  BUGFIXES:
    * Automated Playlist Generator doesn't freeze anymore when it finishes.
      (BR 277865)
    * Use regular MusicBrainz search for tracks with MBID. (BR 280857)
    * Always use English AND/OR in Collection Filter even if translations are
      in effect. (BR 279559)
    * Fix errors in the saved playlists view when removing a playlist. (BR 273358)
    * Fixed issue where the Context View wrench was not created when the
      Context View had no applets. (BR 280382)
    * Fixed off-by-one error in organize collection dialog.
    * Fixed issue that made TagGuesser dialog to forget setings. (BR 280288)
    * Fixed tags guessing from full file path. (BR 264302)
    * Work around a Qt bug that crashed Amarok in various situations. (BR 207382, BR 269227)