@@ -54,7 +54,7 @@ namespace The {
 
 SvgHandler::SvgHandler( QObject* parent )
     : QObject( parent )
-    , m_cache( new ImageCache( "Amarok-pixmaps", 20 * 1024 ) )
+    , m_cache( new KImageCache( "Amarok-pixmaps", 20 * 1024 ) )
     , m_themeFile( "amarok/images/default-theme-clean.svg" )  // //use default theme
     , m_customTheme( false )
 {
@@ -131,7 +131,7 @@ QPixmap SvgHandler::renderSvg( const QString &name,
     }
 
     QPixmap pixmap;
-    if( skipCache || !m_cache->find( key, pixmap ) )
+    if( skipCache || !m_cache->findPixmap( key, &pixmap ) )
     {
         pixmap = QPixmap( width, height );
         pixmap.fill( Qt::transparent );
@@ -154,7 +154,7 @@ QPixmap SvgHandler::renderSvg( const QString &name,
             m_renderers[name]->render( &pt, element, QRectF( 0, 0, width, height ) );
   
         if( !skipCache )
-            m_cache->insert( key, pixmap );
+            m_cache->insertPixmap( key, pixmap );
     }
 
     return pixmap;
@@ -173,7 +173,7 @@ QPixmap SvgHandler::renderSvgWithDividers(const QString & keyname, int width, in
             .arg( height );
 
     QPixmap pixmap;
-    if ( !m_cache->find( key, pixmap ) ) {
+    if ( !m_cache->findPixmap( key, &pixmap ) ) {
 //         debug() << QString("svg %1 not in cache...").arg( key );
 
         pixmap = QPixmap( width, height );
@@ -205,7 +205,7 @@ QPixmap SvgHandler::renderSvgWithDividers(const QString & keyname, int width, in
         m_renderers[name]->render( &pt, "divider_top", QRectF( margin, 0 , width - 1 * margin, 1 ) );
         m_renderers[name]->render( &pt, "divider_bottom", QRectF( margin, height - 1 , width - 2 * margin, 1 ) );
     
-        m_cache->insert( key, pixmap );
+        m_cache->insertPixmap( key, pixmap );
     }
 
     return pixmap;
@@ -238,7 +238,7 @@ void SvgHandler::discardCache()
 {
     //redraw entire app....
     reTint();
-    m_cache->discard();
+    m_cache->clear();
     App::instance()->mainWindow()->update();
 }
 
@@ -267,7 +267,7 @@ QPixmap SvgHandler::addBordersToPixmap( const QPixmap &orgPixmap, int borderWidt
     }
 
     QPixmap pixmap;
-    if( skipCache || !m_cache->find( key, pixmap ) )
+    if( skipCache || !m_cache->findPixmap( key, &pixmap ) )
     {
         // Cache miss! We need to create the pixmap
         // if skipCache is true, we might actually already have fetched the image, including borders from the cache....
@@ -300,7 +300,7 @@ QPixmap SvgHandler::addBordersToPixmap( const QPixmap &orgPixmap, int borderWidt
         m_renderers[m_themeFile]->render( &pt, "cover_border_left", QRectF( 0, borderWidth, borderWidth, orgPixmap.height() ) );
     
         if( !skipCache )
-            m_cache->insert( key, pixmap );
+            m_cache->insertPixmap( key, pixmap );
     }
 
     return pixmap;
